2nd Commit ~ Changes in content, not in PHP

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </header><!-- End Header -->
   <div class="alert alert-warning alert-dismissible fade show mb-0 py-2" role="alert"  style="top:73px; left: 0; position: sticky; z-index: 1000; border-radius: 0", >
   <strong>Hello Folks!</strong> Want to book Ashish ? &nbsp; &nbsp; 
-  <button type="button" id="bookAshish" class="btn btn-outline-warning"  onclick="window.location.href='index.php#contact'">CLICK HERE</button>
+  <button type="button" id="bookAshish" class="btn btn-outline-warning"  onclick="window.location.href='index.html#contact'">CLICK HERE</button>
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
   <!-- ======= Hero Section ======= -->
