--- a/videoLessons.html
+++ b/videoLessons.html
@@ -43,15 +43,15 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto " href="./index.php#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="./index.php#about">About</a></li>
-          <li><a class="nav-link scrollto" href="./index.php#ebook">Ebook</a></li>
-          <li><a class="nav-link scrollto active" href="./videoLessons.php">Video Lessons</a></li>
+          <li><a class="nav-link scrollto " href="./index.html#hero">Home</a></li>
+          <li><a class="nav-link scrollto" href="./index.html#about">About</a></li>
+          <li><a class="nav-link scrollto" href="./index.html#ebook">Ebook</a></li>
+          <li><a class="nav-link scrollto active" href="./videoLessons.html">Video Lessons</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="./index.php#contact" class="get-started-btn scrollto">Connect With Us</a>
+      <a href="./index.html#contact" class="get-started-btn scrollto">Connect With Us</a>
 
     </div>
   </header><!-- End Header -->
@@ -286,11 +286,11 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="./index.php">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="./index.php#about">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="./index.php#ebook">Ebook</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="./videoLessons.php">Video Lessons</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="./index.php#contact">Book Ashish</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="./index.html">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="./index.html#about">About us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="./index.html#ebook">Ebook</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="./videoLessons.html">Video Lessons</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="./index.html#contact">Book Ashish</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
             </ul>
