Theme color changed

--- a/videoLessons.html
+++ b/videoLessons.html
@@ -51,7 +51,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="./index.html#contact" class="get-started-btn scrollto">Connect With Us</a>
+      <a href="./index.html#contact" class="get-started-btn scrollto">Book Ashish</a>
 
     </div>
   </header><!-- End Header -->
@@ -182,7 +182,7 @@
         <div class="text-center">
           <h3>Key note Speaker</h3>
           <p>If you are looking to take your event to the next level, Eddie is your guy. Not only will he captivate and inspire the audience, but will provide them with the mental tools and tactics required to evolve.</p>
-          <a class="cta-btn" href="./index.php#contact">Book Ashish Samantaray</a>
+          <a class="cta-btn" href="./index.html#contact">Book Ashish Samantaray</a>
         </div>
 
       </div>
