--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="#contact" class="get-started-btn scrollto">Connect With Us</a>
+      <a href="#contact" class="get-started-btn scrollto">Book Ashish</a>
 
     </div>
   </header><!-- End Header -->
-  <div class="alert alert-warning alert-dismissible fade show mb-0 py-2" role="alert"  style="top:73px; left: 0; position: sticky; z-index: 1000; border-radius: 0", >
+  <!-- <div class="alert alert-warning alert-dismissible fade show mb-0 py-2" role="alert"  style="top:73px; left: 0; position: sticky; z-index: 1000; border-radius: 0", >
   <strong>Hello Folks!</strong> Want to book Ashish ? &nbsp; &nbsp; 
   <button type="button" id="bookAshish" class="btn btn-outline-warning"  onclick="window.location.href='index.html#contact'">CLICK HERE</button>
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-</div>
+</div> -->
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center justify-content-center">
     <div class="container" data-aos="fade-up">
@@ -92,7 +92,7 @@
             <img src="./assets/img/Ashish Samantaray.png" class="img-fluid" alt="" style="width: 60%">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
-            <h3 style="font-size: 40px;">Hi, I'm <span style="background-color: #ffc451;">Ashish Samantaray.</span></h3>
+            <h3 style="font-size: 40px;">Hi, I'm <span style="background-color:  #ffd325;">Ashish Samantaray.</span></h3>
             <h4 style="font-family: 'Caveat', cursive; font-size: 40px;">I <span style="text-decoration: underline">design, sing, paint</span> & <span style="text-decoration: underline">write</span>.</h4>
             <p class="fst-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -205,7 +205,7 @@
     </section><!-- End Cta Section -->
 
     <!-- ======= Counts Section ======= -->
-    <section id="counts" class="counts">
+    <!-- <section id="counts" class="counts">
       <div class="container" data-aos="fade-up">
 
         <div class="row no-gutters">
@@ -258,15 +258,16 @@
                   </div>
                 </div>
               </div>
-            </div><!-- End .content-->
+            </div>
           </div>
         </div>
 
       </div>
-    </section><!-- End Counts Section -->
+    </section> -->
+    <!-- End Counts Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials">
+    <!-- <section id="testimonials" class="testimonials">
       <div class="container" data-aos="zoom-in">
 
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
@@ -284,7 +285,7 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -298,7 +299,7 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -312,7 +313,7 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -326,7 +327,7 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -340,13 +341,13 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
 
       </div>
-    </section>
+    </section> -->
     <!-- End Testimonials Section -->
 
     <!-- ======= Contact Section ======= -->
