Theme color changed

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#about">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#ebook">Ebook</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="./videoLessons.php">Video Lessons</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="./videoLessons.html">Video Lessons</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#contact">Book Ashish</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
