--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#ebook">Ebook</a></li>
-          <li><a class="nav-link scrollto " href="./videoLessons.php">Video Lessons</a></li>
+          <li><a class="nav-link scrollto " href="./videoLessons.html">Video Lessons</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
