CSS & Image change

--- a/videoLessons.html
+++ b/videoLessons.html
@@ -46,6 +46,7 @@
           <li><a class="nav-link scrollto " href="./index.html#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="./index.html#about">About</a></li>
           <li><a class="nav-link scrollto" href="./index.html#ebook">Ebook</a></li>
+          <li><a class="nav-link scrollto" href="./blogs.html">Blog</a></li>
           <li><a class="nav-link scrollto active" href="./videoLessons.html">Video Lessons</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
